[package]
name = "lcs-png-diff"
version = "0.3.0"
edition = "2021"
documentation = "https://github.com/jianliao/lcs-png-diff-rs"
homepage = "https://github.com/jianliao/lcs-png-diff-rs"
repository = "https://github.com/jianliao/lcs-png-diff-rs"
license = "MIT"
readme ="README.md"
authors = ["Jian Liao <jian.liao@gmail.com>"]
description = "PNG diff tool with LCS algorithm"
keywords = [
  "PNG",
  "Bitmap",
  "lcs"
]
exclude = [
  "tests/**/*",
  ".gitignore"
]

[lib]
name = "lcs_png_diff"
path = "src/lib.rs"

[[bin]]
name = "lcs-png-diff"
path = "src/main.rs"
required-features = ["binary"]

[features]
default = ["binary"]
binary = ["all_image_formats"]
all_image_formats = ["image/png"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
base64 = "0.13.0"
clap = { version = "3.1.12", features = ["derive"] }
image = { version = "0.24.2", default-features = false }
rusty_pool = { version = "0.7.0", default-features = false }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
